# vidify

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  cronjob.txt  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
src/: app.py
