[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vidify"
version = "0.0.1"
authors = [
	{name="Nguyen Quang Khoi", email="khoinguyen19k8@gmail.com"},
]
description = "Discord music bot"
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/khoinguyen19k8/vidify"

